--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
+title: Chan Wen Le
+description: 
+##### About Me
+Hello! I'm [Your Name], and I’m excited to embark on my journey into the world of data analytics. Recently, I’ve taken a keen interest in uncovering insights and driving decision-making through data, and I’m eager to learn and grow in this dynamic field.
 
+With a background in [Your Previous Field or Studies], I’ve developed a strong foundation in [Relevant Skills or Knowledge, e.g., statistical analysis, programming, etc.]. Now, I’m diving into data analytics, focusing on areas such as data visualization, statistical modeling, and data-driven decision making. My goal is to leverage data to solve real-world problems and make impactful contributions.
+
+I’m enthusiastic about exploring new tools and technologies, including [Mention any specific tools or languages you are learning or interested in, e.g., Python, R, SQL, Tableau, etc.]. I believe that continuous learning and hands-on experience are key to mastering data analytics, and I’m committed to staying up-to-date with industry trends and best practices.
+
+Feel free to check out my repositories to see the projects I’m working on, and don’t hesitate to connect or collaborate. I’m always open to feedback, suggestions, and discussions about data analytics.
+
+Looking forward to growing and learning together in this exciting field!
+show_downloads: False
+theme: jekyll-theme-minimal
