--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,7 @@
+#remote_theme: pages-themes/minimal@v0.2.0
+#plugins:
+#- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Chan Wen Le
-description: 
-Hello! I'm [Your Name], and I’m excited to embark on my journey into the world of data analytics. Recently, I’ve taken a keen interest in uncovering insights and driving decision-making through data, and I’m eager to learn and grow in this dynamic field.
-
-With a background in [Your Previous Field or Studies], I’ve developed a strong foundation in [Relevant Skills or Knowledge, e.g., statistical analysis, programming, etc.]. Now, I’m diving into data analytics, focusing on areas such as data visualization, statistical modeling, and data-driven decision making. My goal is to leverage data to solve real-world problems and make impactful contributions.
-
-I’m enthusiastic about exploring new tools and technologies, including [Mention any specific tools or languages you are learning or interested in, e.g., Python, R, SQL, Tableau, etc.]. I believe that continuous learning and hands-on experience are key to mastering data analytics, and I’m committed to staying up-to-date with industry trends and best practices.
-
-Feel free to check out my repositories to see the projects I’m working on, and don’t hesitate to connect or collaborate. I’m always open to feedback, suggestions, and discussions about data analytics.
-
-Looking forward to growing and learning together in this exciting field!
+description: Aspiring data enthusiast with a background in economics and finance, I’m dedicated to transforming complex data into actionable insights. On a continuous learning journey, I’m excited to dive into automation and advanced analytics to optimize data processes and uncover new opportunities. Follow along as I explore the intersection of finance and data analytics, leveraging my expertise to drive meaningful, data-driven solutions.
 show_downloads: False
 theme: jekyll-theme-minimal
